--- a/lec04/Probabilidad.ipynb
+++ b/lec04/Probabilidad.ipynb
@@ -145,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.hist(s,bins=50,density=True)"
+    "_=plt.hist(s,bins=50,density=True)"
    ]
   },
   {
